--- a/erb/backend-flask.env.erb
+++ b/erb/backend-flask.env.erb
@@ -5,7 +5,7 @@ BACKEND_URL=https://4567-<%= ENV['GITPOD_WORKSPACE_ID'] %>.<%= ENV['GITPOD_WORKS
 OTEL_EXPORTER_OTLP_ENDPOINT=https://api.honeycomb.io
 OTEL_EXPORTER_OTLP_HEADERS=x-honeycomb-team=<%= ENV['HONEYCOMB_API_KEY'] %>
 OTEL_SERVICE_NAME=backend-flask
-AWS_XRAY_URL=*4567-<%= ENV['GITPOD_WORKSPACE_ID}.<%= ENV['GITPOD_WORKSPACE_CLUSTER_HOST'] %>*
+AWS_XRAY_URL=*4567-<%= ENV['GITPOD_WORKSPACE_ID'] %>.<%= ENV['GITPOD_WORKSPACE_CLUSTER_HOST'] %>*
 AWS_XRAY_DAEMON_ADDRESS=xray-daemon:2000
 AWS_DEFAULT_REGION=<%= ENV['AWS_DEFAULT_REGION'] %>
 AWS_ACCESS_KEY_ID=<%= ENV['AWS_ACCESS_KEY_ID'] %>
